--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Electrical energy consumption prediction website (front-end)",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "model": "node server/model.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/chek2x/wattch#readme",
   "dependencies": {
+    "arima": "^0.2.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "libsvm-js": "^0.2.1",
     "nodemon": "^3.1.0"
   }
 }
