--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "dependencies": {
     "arima": "^0.2.5",
     "body-parser": "^1.20.2",
+    "csv-parse": "^5.5.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "libsvm-js": "^0.2.1",
-    "nodemon": "^3.1.0"
+    "ml-svm": "^2.1.2",
+    "node-csv": "^0.1.2",
+    "nodemon": "^3.1.0",
+    "readline": "^1.3.0"
   }
 }
